# yanniang

./: .code-workspace  .editorconfig  .gitignore  Cargo.toml  README.md  biome.json  bun.lockb  load-context.ts  package.json  server.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml  wrangler.toml.example
app/: app.css  app.server.ts  entry.server.tsx  env.ts  global.d.ts  language.ts  root.tsx  routes.ts  session.server.ts  session.ts  toast.ts  translations.sever.ts
app/components/: LoginButton.tsx  RootLayout.tsx
app/components/ui/: button.tsx  (+2 more)
app/i18n/: context.tsx  resolver.server.ts  translations.ts  useTranslation.ts
app/infrastructure/: d1UserRepository.ts  uuidGenerator.ts
app/middlewares/: extendSession.ts  getSessionId.ts  requireAuth.ts  withAuthStatus.ts
app/pages/: IndexPage.tsx  LoginPage.tsx  SignUpPage.tsx
app/routes/: _404.tsx  _index.tsx  _renderer.tsx  dashboard.tsx  home.tsx  index.tsx  login.ts  login.tsx  logout.ts  logout.tsx  note.$noteId.tsx  profile.tsx  signup.tsx  signup2.tsx
app/useCases/: registerUser.ts
app/utils/: brand.ts
app/welcome/: welcome.tsx
backend/: .env.example  .gitignore  Cargo.toml
backend/crates/domain/: Cargo.toml
backend/crates/domain/src/: lib.rs
backend/crates/domain/src/command/model/: comment.rs  mod.rs  summary.rs  talk_thread.rs  user.rs
backend/crates/domain/src/command/repository/: mod.rs  user.rs
backend/crates/domain/src/model/: mod.rs  session.rs
backend/crates/domain/src/query/model/: mod.rs  summary.rs  user.rs
backend/crates/domain/src/query/repository/: mod.rs  summary.rs  user.rs
backend/crates/domain/src/repository/: mod.rs  session.rs
backend/crates/domain/src/usecase/: find_summary_by_uuid.rs  list_summaries.rs  login.rs  logout.rs  mod.rs  verify_session.rs
backend/crates/domain/src/value_object/: comment_id.rs  handle.rs  lang.rs  mod.rs  password.rs  session_id.rs  summary_id.rs  talk_thread_id.rs  talk_thread_title.rs  user_id.rs
backend/crates/infrastructure/: Cargo.toml
backend/crates/infrastructure/src/persistence/: mod.rs  session.rs
backend/crates/infrastructure/src/persistence/query/: mod.rs  summary.rs  user.rs
backend/crates/presentation/: Cargo.toml
backend/crates/presentation/src/: lib.rs  state.rs
backend/crates/presentation/src/auth/: extractor.rs  login.rs  logout.rs  mod.rs
backend/crates/presentation/src/summary/: find_by_uuid.rs  list.rs  mod.rs
backend/crates/usecase/: Cargo.toml
backend/crates/usecase/src/: find_summary_by_uuid.rs  lib.rs  list_summaries.rs  login.rs  logout.rs  verify_session.rs
backend/migrations/: 20250113013458_initial.up.sql  20250125024546_initial.down.sql  20250125024546_initial.up.sql
backend/seed/: README.md  summary.csv  thread.csv  user.csv  user_lang.csv
backend/src/: main.rs
db/invitation_codes/: create.sql  list.sql  seed.sql
db/notes/: create.sql  seed.sql
docs/: dev_status.md  glossary.md
frontend/: .env.example  .gitignore  biome.json  bun.lockb  loadContext.ts  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.toml.example
frontend/.storybook/: main.ts
frontend/app/: entry.client.tsx  entry.server.tsx  root.tsx  style.css
frontend/functions/: [[path]].ts
functions/: [[path]].ts
migrations/: 20250113013458_initial.down.sql
schemas/: users.sql
schemas/invitation_codes/: create.sql
schemas/users/: create.sql  seed.sql
src/: env.ts  index.ts  index.tsx  main.rs  user.ts
src/middlewares/: extendSession.ts  index.ts  requireAuth.ts  withAuthStatus.ts
src/routes/: dashboard.tsx  index.ts  login.ts  logout.ts  settings.tsx
test/: index.spec.ts
(+46 files in other folders)
