[package]
name = "yanniang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
chrono = "0.4.39"
shuttle-axum = "0.50.0"
shuttle-runtime = "0.50.0"
shuttle-shared-db = { version = "0.50.0", features = ["postgres", "sqlx"] }
thiserror = "2.0.10"
tokio = "1.28.2"
tracing = "0.1.41"
unicode-segmentation = "1.12.0"
uuid = "1.11.0"

[dependencies.sqlx]
version = "0.8.3"
features = ["chrono", "postgres", "runtime-tokio-rustls", "uuid"]
