[package]
name = "yanniang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
color-eyre = "0.6.3"
futures = "0.3.31"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
shuttle-axum = "0.52.0"
shuttle-runtime = { version = "0.52.0", default-features = false }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.13.1", features = ["serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
