[package]
name = "yanniang"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.4", features = ["ws"] }
color-eyre = "0.6.5"
futures = "0.3.31"
serde = { version = "1.0.221", features = ["derive"] }
serde_json = "1.0.144"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
opt-level = "s"
strip = true
