[package]
name = "yanniang-presentation"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
tower-cookies = "0.11.0"
tracing = "0.1.41"
uuid = { version = "1.13.1", features = ["serde", "v7"] }
yanniang-domain = { path = "../domain" }
